objects/Dipl_me__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Dipl_mes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Programme__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>International MBA</fullName>
                </value>
                <value>
                    <fullName>CPA Lyon</fullName>
                </value>
                <value>
                    <fullName>Executive MBA</fullName>
                </value>
                <value>
                    <fullName>European Master in Management</fullName>
                </value>
                <value>
                    <fullName>Global Entrepreneurship Programme</fullName>
                </value>
                <value>
                    <fullName>MS Ingénierie Financière</fullName>
                </value>
                <value>
                    <fullName>MSc Luxury Mngt &amp; Mkt</fullName>
                </value>
                <value>
                    <fullName>MS Ingénierie et Internet</fullName>
                </value>
                <value>
                    <fullName>MS Acheteur Manager International</fullName>
                </value>
                <value>
                    <fullName>MS Management  Activités Industrielles</fullName>
                </value>
                <value>
                    <fullName>M.S. Mngt des Ent Vivant et de l&apos;agro.</fullName>
                </value>
                <value>
                    <fullName>MS Agro-Industriel</fullName>
                </value>
                <value>
                    <fullName>MS Audit et Information Financière</fullName>
                </value>
                <value>
                    <fullName>MS Conseil en Organisation</fullName>
                </value>
                <value>
                    <fullName>MS Stratégie et Dvpt d’Affaires Intl</fullName>
                </value>
                <value>
                    <fullName>MS Mgt et Dvpt Systèmes d&apos;Information</fullName>
                </value>
                <value>
                    <fullName>MS Entreprendre</fullName>
                </value>
                <value>
                    <fullName>MS Finance de Marché</fullName>
                </value>
                <value>
                    <fullName>MS GIRIS</fullName>
                </value>
                <value>
                    <fullName>MS Marketing Industriel</fullName>
                </value>
                <value>
                    <fullName>MS NTIC Management</fullName>
                </value>
                <value>
                    <fullName>MS Ingénierie et Mngt des SI</fullName>
                </value>
                <value>
                    <fullName>MS Juriste Manager International</fullName>
                </value>
                <value>
                    <fullName>MS Knowledge Management</fullName>
                </value>
                <value>
                    <fullName>MS Management des Entreprises de Service</fullName>
                </value>
                <value>
                    <fullName>M.S. Strat Internat et Marketing Indus</fullName>
                </value>
                <value>
                    <fullName>MS Management de la Technologie</fullName>
                </value>
                <value>
                    <fullName>Programme Général de Management</fullName>
                </value>
                <value>
                    <fullName>PhD in Management</fullName>
                </value>
                <value>
                    <fullName>MS Stratégie et Marketing des Entr. Ind.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>CPA Lyon</fullName>
                </value>
                <value>
                    <fullName>Faculté</fullName>
                </value>
                <value>
                    <fullName>European Master in Management</fullName>
                </value>
                <value>
                    <fullName>ESC Lyon</fullName>
                </value>
                <value>
                    <fullName>MSc in Luxury Management et Marketing</fullName>
                </value>
                <value>
                    <fullName>Global Entrepreneurship Program</fullName>
                </value>
                <value>
                    <fullName>Mastères Spécialisés</fullName>
                </value>
                <value>
                    <fullName>Programme Général de Management</fullName>
                </value>
                <value>
                    <fullName>Msc in Sports Industry Management</fullName>
                </value>
                <value>
                    <fullName>MSc in Innovation,Design,Entrep. &amp; Arts</fullName>
                </value>
                <value>
                    <fullName>MSc in International Hospitality Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_d_entr_e__c</fullName>
        <label>Promo d&apos;entrée</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_de_sortie__c</fullName>
        <label>Promo de sortie</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rang_dipl_me__c</fullName>
        <label>Rang diplôme</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reussi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Réussi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sous_promo__c</fullName>
        <label>Sous promo</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Diplômes EMLYON</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Numéro automatique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diplômes EMLYON</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>